<?xml version="1.0"?>
<package format="2">
  <name>husky_high_level_controller</name>
  <version>0.1.0</version>
  <description>The husky_high_level_controller package</description>
  <maintainer email="theodoro.cardoso@gmail.com">ros</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
